--- a/Resources/4DWP_Wizard/Translations/DE.json
+++ b/Resources/4DWP_Wizard/Translations/DE.json
@@ -36,7 +36,8 @@
             "translation": "Brutto"
         }
     ],
-    "formulas": [{
+    "formulas": [
+        {
             "original": "Sum of invoice items",
             "translation": "Gesamt Netto"
         },
